<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:orientation="vertical"
    tools:context=".CadastroPetActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:gravity="center_vertical"
        android:background="@color/fundo"
        tools:context=".ToolBar">

        <ImageView
            android:id="@+id/imgVoltar"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/arrow" />

        <ImageView
            android:id="@+id/imgMenu"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/icon_menu"
            android:layout_marginStart="265dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomePet"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/filtro_background"
                android:layout_marginStart="5dp"
                android:padding="7dp"
                android:inputType="textPersonName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <RadioGroup
                android:id="@+id/rgTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <RadioButton
                    android:id="@+id/rbCachorro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cachorro"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/rbGato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gato"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </RadioGroup>

            <Spinner
                android:id="@+id/spRaca"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:background="@drawable/filtro_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <RadioGroup
                android:id="@+id/rgSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <RadioButton
                    android:id="@+id/rbMacho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/macho"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/rbFemea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femea"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </RadioGroup>

            <Spinner
                android:id="@+id/spFaixaEtaria"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:background="@drawable/filtro_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <Switch
                android:id="@+id/swCastrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/castracao"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spPorte"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:background="@drawable/filtro_background"
                android:layout_marginStart="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vacinas"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <CheckBox
                android:id="@+id/cbRaiva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raivaCanina"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"/>

            <CheckBox
                android:id="@+id/cbLeish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leishmaniose"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obs"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricaoCadastro"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edtDescricao"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/lista_background"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:padding="7dp"/>

        <Button
            android:id="@+id/btFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionarFoto"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/imgPet"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/lista_background"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrarPet"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</LinearLayout>